Update frontend API endpoint to production backend URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -334,7 +334,7 @@
 
     <script>
         // Backend API endpoint - update with your Azure deployment URL
-        const API_BASE_URL = 'https://outlook-ai-backend.azurewebsites.net';
+        const API_BASE_URL = 'https://outlook-ai-backend-djerd0cve5aba2aw.westus2-01.azurewebsites.net';
         
         // Office.js initialization - with fallback
         let isOfficeReady = false;
