Fix userId to match JWT token - use 'admin' instead of 'demo'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -554,7 +554,7 @@
                         subject: '',
                         threadHistory: []
                     },
-                    userId: 'demo', // Match the JWT token's id field
+                    userId: 'admin', // Match the JWT token's id field
                     preferences: {
                         tone: 'professional',
                         length: 'medium'
